# big-data

./: .gitignore  Dockerfile  Makefile  README.md  config.yaml.example  docker-compose.yml  pyproject.toml  requirements.txt
docs/: DOCUMENTACAO_PROJETO.md
reports/: REPORT_COMPLETO.md
results/: README.md  REPORT.md
scripts/: build_integration_fixture.sh  docker-entrypoint.sh  download_dataset.sh  generate_results_report.py  measure_load_memory.sh  run_all.sh  start-cluster.sh
specs/004-scalability-cpu-fractions/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: config.py
src/benchmark/: memory_estimate.py  metrics.py  paths.py  report.py  report_sections.py  run_log.py  runner.py
src/cli/: main.py
src/dask_impl/: __init__.py  louvain_dask.py  lpa_dask.py
src/graph/: graph.py
src/louvain_core/: __init__.py  compress.py  delta_q.py  graph.py  hierarchy.py  modularity.py  runner.py
src/lpa_core/: distributed.py  lpa.py
src/preprocessing/: __init__.py  artifacts.py  load.py  load_graph.py  load_snap.py  pipeline.py  sample_lcc.py  validate_artifact.py  write_artifact.py
src/ray_impl/: __init__.py  louvain_ray.py  lpa_ray.py
tests/: conftest.py
tests/fixtures/: toy_graphs.py
tests/integration/: conftest.py  dataset.py  enron.py  test_enron_e2e.py  test_load_graph_pokec.py  test_lpa_orkut.py  test_lpa_pokec.py  test_ray_tiny.py  test_smoke_tiny.py
tests/unit/: test_benchmark_runner.py  test_benchmark_seeds.py  test_cli.py  test_compress.py  test_config.py  test_dask_cluster_mode.py  test_delta_q.py  test_delta_q_batch.py  test_edge_cases.py  test_graph_edges.py  test_hierarchy.py  test_memory_estimate.py  test_metrics.py  test_modularity.py  test_preprocess.py  test_ray_cluster_mode.py  (+4 more)
(+8 files in other folders)
