[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "distributed-louvain"
version = "0.1.0"
description = "Distributed Louvain community detection on email-Enron (Ray vs Dask)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ray>=2.9.0",
    "dask[distributed]>=2024.1.0",
    "pyarrow>=14.0.0",
    "networkx>=3.2",
    "pyyaml>=6.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.0",
    "ruff>=0.8.0",
    "pylint>=3.0",
    "bandit>=1.7",
    "deptry>=0.20",
    "pip-audit>=2.7",
    "mutmut>=3.6",
]

[project.scripts]
louvain = "cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["config"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
markers = [
    "integration: full E2E pipeline with Ray/Dask (slow)",
]

[tool.deptry]
optional_dependencies_dev_groups = ["dev"]
known_first_party = [
    "benchmark",
    "cli",
    "config",
    "dask_impl",
    "louvain_core",
    "preprocessing",
    "ray_impl",
]

[tool.deptry.package_module_name_map]
pyyaml = "yaml"

[tool.mutmut]
source_paths = ["src/louvain_core"]
only_mutate = ["src/louvain_core/*.py"]
pytest_add_cli_args = [
    "tests/unit/test_modularity.py",
    "tests/unit/test_compress.py",
    "tests/unit/test_delta_q.py",
    "tests/unit/test_delta_q_batch.py",
    "tests/unit/test_stop_epsilon.py",
    "tests/unit/test_runner.py",
    "tests/unit/test_hierarchy.py",
    "tests/unit/test_edge_cases.py",
    "tests/unit/test_graph_edges.py",
]
